# NEMO

./: .gitattributes  .gitignore  Doxyfile  LICENSE  README.md
DataParser/: LoggerFile.py  parse_file.py  plot_motion_data.py
DataSimulator/: CMakeLists.txt  Simulator.cpp  Simulator.h  Writer.cpp  Writer.h  serialisation.cpp  serialisation.h  simulate_data.cpp  test_simulator.cpp
DataSimulator/NMEASimulator/NMEASimulator.xcodeproj/: project.pbxproj
DataTimestamping/: timestamp_data.py
DesktopUI/: algorithms.py  authorisation.py  command.py  configure.py  filters.py  main.py  transfer.py
HardwareSimulator/: platformio.ini  simulator.code-workspace
LogConvert/: BUILDING.md  CMakeLists.txt  Dockerfile  (+2 more)
LogConvert/src/: CMakeLists.txt  PacketSource.cpp  PacketSource.h  SerialisableFactory.cpp  SerialisableFactory.h  TeamSurvSource.cpp  TeamSurvSource.h  YDVRSource.cpp  YDVRSource.h  logconvert.cpp  serialisation.cpp  serialisation.h
sockets/: gui.ui  (+4 more)
wibl-python/: .gitignore  Dockerfile.build  Dockerfile.vizlambda  Jenkinsfile  MANIFEST.in  README.md  requirements-build.txt  requirements-lambda.txt  requirements-vizlambda.txt  requirements.txt  setup.cfg  setup.py
wibl-python/doc/test/: configure.local.json  local_lambda_testing.ipynb  test-event.json
wibl-python/doc/test/simulator/: b12_v2_example.json  b12_v3_example.json  simulator_testing.ipynb
wibl-python/doc/visualization/: VIZ_LAMBDA_TEST.md
wibl-python/doc/viz/: gmt_viz_proto.ipynb  pycarto_viz_proto.ipynb  pygmt_test.py  pygmt_test_gtiff.py  wibl-plot-gmt.bash
wibl-python/doc/viz/data/: bigfile-md.tif
wibl-python/doc/viz/gmt-docker/: Dockerfile  README.md
wibl-python/examples/: README.md  configure-submission-test.json  configure-submission.json  ship-metadata-complete.json  ship-metadata-simple.json
wibl-python/scripts/: AWSCloudSetup.md  Convert-DATToWIBL.ps1  processWibl.ps1  vizlambdainvoke.py
wibl-python/scripts/cloud/AWS/: README.md  build-lambda.sh  configuration-parameters.sh  configure-buckets.sh  configure-ec2-test-instance.sh  configure-lambdas.sh  configure-manager-ecs-vpc-endpoints.sh  configure-manager-ecs.sh  configure-sns.sh  update-lambda-code.sh
wibl-python/scripts/cloud/AWS/manager/: Manager-AWSSetup.md  Manager-AWSSetupEC2.md
wibl-python/scripts/cloud/AWS/manager/input/: manager-task-definition.proto
wibl-python/scripts/data-management/: Convert-DATToWIBL.ps1  README.md  convertToWibl.ps1  submitDCDB.ps1  validateWibl.ps1
wibl-python/scripts/desktop/: configuration-parameters.sh  configure-desktop.sh
wibl-python/tests/: fixtures.py
wibl-python/tests/aws/: conftest.py  docker-compose.yml  fixtures.py
wibl-python/tests/aws/data/geojson/: 00e8421e-abf2-437e-8873-a886f09a84ae.json  24a4c5fd-7616-4d31-8b1d-fd05669f1c41.json  56f048cb-a062-411c-a0f9-4535685d5df1.json  650436ee-55b4-43e7-8faf-a1662885c516.json  83b9b575-03fb-40d0-8b45-3da15d0d3a03.json  942a59ce-cc62-4667-ba84-2b9c2d0b3f99.json
wibl-python/tests/aws/unit/: test_geojson_viz.py
wibl-python/tests/data/: b12_v3_metadata_example.json  configure.local.json  test-algo-dedup-nodata.wibl  test-algo-dedup.wibl  test-algo-nodatafilter.wibl  test-algo-unknown.wibl  test-bin-algo-nodatafilter.wibl
wibl-python/tests/data/geojson/: 09a1fd7a-dbd9-4274-a12f-72cc4b0961cc.json  11f79484-d60a-4e03-aef1-9b0ec2078445.json  2f812228-85b4-4113-8214-8fac059da7e6.json  3c166d4f-de2f-4398-a0a9-21b2f667bc8e.json  49a27752-5e62-46f5-bf3d-12dd5288a122.json  77d7b2c2-1805-4287-b06e-ae261c5cff3e.json  b0df2cef-6033-4ecb-9ebe-287136968c58.json  da599ce9-9091-4310-a4ae-692ffee80324.json  f02c04b3-e701-4701-8063-e27f6cdad263.json  fc7e4ebd-c3d9-4d04-8283-988a34555608.json
wibl-python/tests/fixtures/: configure.local.json
wibl-python/tests/integration/: test_wibl.bash
wibl-python/tests/unit/: test_algorithms.py  test_config.py  test_data_generator.py  test_lambdas.py  test_logger_file.py  test_util.py
wibl-python/wibl/: __init__.py
wibl-python/wibl-manager/: Dockerfile  README.md  docker-compose.yaml  manager.env  manager_test.env  manager_test.sh  pyproject.toml  requirements.txt
wibl-python/wibl-manager/wibl_manager/: __init__.py  app_globals.py  application.py  create_database.py  geojson_data.py  heartbeat.py  wibl_data.py
wibl-python/wibl-manager/wibl_manager/tests/: test_wibl_manager.py
wibl-python/wibl/cmd/: __init__.py  __main__.py  datasim.py  dcdb_upload.py  edit_wibl_file.py  upload_wibl_file.py  validate.py  wibl_proc.py
wibl-python/wibl/command/: __init__.py  __main__.py  datasim.py  dcdb_upload.py  edit_wibl_file.py  parse_wibl_file.py  upload_wibl_file.py  validate.py  wibl_proc.py
wibl-python/wibl/core/: __init__.py  config.py  datasource.py  fileloader.py  geojson_convert.py  interpolation.py  logger_file.py  notification.py  statistics.py  timestamping.py
wibl-python/wibl/core/algorithm/: __init__.py  runner.py
wibl-python/wibl/core/algorithm/deduplicate/: __init__.py
wibl-python/wibl/core/algorithm/nodatareject/: __init__.py
wibl-python/wibl/core/util/: __init__.py  aws.py
wibl-python/wibl/defaults/processing/cloud/aws/: configure.json
wibl-python/wibl/defaults/submission/cloud/aws/: configure.json
wibl-python/wibl/defaults/visualization/cloud/aws/: configure.json
wibl-python/wibl/manager/: __init__.py  app_globals.py  application.py  geojson_data.py  heartbeat.py  return_codes.py  run_tests.py  wibl_data.py
wibl-python/wibl/processing/algorithms/: __init__.py
wibl-python/wibl/processing/algorithms/common/: __init__.py  lineage.py
wibl-python/wibl/processing/algorithms/deduplicate/: __init__.py
wibl-python/wibl/processing/cloud/aws/: __init__.py  lambda_function.py
wibl-python/wibl/simulator/data/: __init__.py  writer.py
wibl-python/wibl/submission/cloud/aws/: __init__.py  lambda_function.py
wibl-python/wibl/upload/cloud/aws/: __init__.py  lambda_function.py  support.py
wibl-python/wibl/validation/cloud/aws/: __init__.py  lambda_function.py
wibl-python/wibl/visualization/: soundings.py
wibl-python/wibl/visualization/cloud/aws/: __init__.py  lambda_function.py
(+255 files in other folders)
