[metadata]
name = wibl-python
version = attr: wibl.__version__
description = Python code WIBL low-cost data logger system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/ccomjhc/wibl/
author = Brian Calder
author_email = brc@ccom.unh.edu
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = False
python_requires = >= 3.8
install_requires =
    boto3>=1.20
    requests>=2
    numpy>=1.20
    pynmea2>=1.18

[bdist_wheel]
universal = 0

[options.entry_points]
console_scripts =
    cmd = wibl.data_simulator.__main__:main