[metadata]
name = wibl-python
version = attr: wibl.__version__
description = Python code WIBL low-cost data logger system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/ccomjhc/wibl/
author = Brian Calder
author_email = brc@ccom.unh.edu
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >= 3.8
install_requires =
    boto3>=1.20
    requests>=2
    numpy>=1.20
    pynmea2>=1.18
    csbschema~=1.0.4

[bdist_wheel]
universal = 0

[options.entry_points]
console_scripts =
    wibl = wibl.cmd.__main__:main

[options.extras_require]
test =
    pylint==2.12.2
    unittest-xml-reporting==3.2.0
    lxml>=4.6.5
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-xdist==2.5.0
