[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "wibl_manager"
authors = [
  { name="Brian Calder", email="brc@ccom.unh.edu" },
  { name="Brian Miles", email="bmiles@ccom.unh.edu" },
]
description = "Flask-based RESTful interface to a metadata database for WIBL data file processing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    'gunicorn~=20.1.0',
    'Flask~=2.2.3',
    'Flask-SQLAlchemy~=3.0.3',
    'Flask-RESTful~=0.3.9',
    'requests~=2.28.2',
    'dataclasses-json~=0.5.7'
]

[project.optional-dependencies]
test = [
]

[project.urls]
"Homepage" = "https://bitbucket.org/ccomjhc/wibl/"
"Bug Tracker" = "https://bitbucket.org/ccomjhc/wibl/"

[project.scripts]
wibl-manager = "wibl_manager.application:main"

[tool.setuptools.dynamic]
version = {attr = "wibl_manager.__version__"}
